// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmDeleteModal component confirms delete for multiple pipelines 1`] = `
<EuiOverlayMask>
  <EuiConfirmModal
    buttonColor="danger"
    cancelButtonText="Cancel"
    confirmButtonText="Delete 2 pipelines"
    defaultFocusedButton="cancel"
    onCancel={[MockFunction]}
    onConfirm={[MockFunction]}
    title="Delete 2 pipelines"
  >
    <p>
      You cannot recover deleted pipelines.
    </p>
  </EuiConfirmModal>
</EuiOverlayMask>
`;

exports[`ConfirmDeleteModal component confirms delete for single pipeline 1`] = `
<EuiOverlayMask>
  <EuiConfirmModal
    buttonColor="danger"
    cancelButtonText="Cancel"
    confirmButtonText="Delete pipeline"
    defaultFocusedButton="cancel"
    onCancel={[MockFunction]}
    onConfirm={[MockFunction]}
    title="Delete pipeline \\"testId\\""
  >
    <p>
      You cannot recover a deleted pipeline
    </p>
  </EuiConfirmModal>
</EuiOverlayMask>
`;
